# openfactory-connectors

./: .gitignore  README.md  dev-setup.sh  pyproject.toml
.devcontainer/: README.md  devcontainer.json
.github/workflows/: opcua_coordinator.yml  opcua_gateway.yml  shdr_coordinator.yml  shdr_gateway.yml  unittests.yml
opcua/: README.md  docker-compose.override.yml  docker-compose.yml
opcua/coordinator/: Dockerfile  README.md
opcua/coordinator/debug/: mock_register_device.py
opcua/coordinator/src/: Dockerfile  coordinator.py  coordinator_metrics.py
opcua/debug/: README.md  dev_barcode_reader.yml  dev_temp_sensors.yml  device.yml  mock_add_device.py  send_cmd_to_asset.py  subscribe_to_assets.py
opcua/gateway/: Dockerfile  README.md  requirements_docker.txt
opcua/gateway/src/: Dockerfile  api.py  config.py  entrypoint.sh  gateway.py  gateway_metrics.py  main.py  monitor.py  producer.py  registration.py  state.py  subscription.py  utils.py
opcua/prometheus/: README.md  docker-compose.prometheus.yml  opcua_connector_rules.yml  opcua_connector_scrape.yml  prometheus.yml
prometheus/: README.md  connector_rules.yml  docker-compose.prometheus.yml  opcua_connector_scrape.yml  prometheus.yml  shdr_connector_scrape.yml
scripts/: bump_version.py
src/: README.md
src/connectors/common/: config.py  coordinator.py  coordinator_metrics.py  gateway.py  gateway_metrics.py  kafka_producer.py  requirements_common.txt
src/connectors/common/gateway_assignment/: round_robin.py
src/connectors/opcua/: README.md
src/connectors/opcua/coordinator/: Dockerfile  app_opcua_coordinator.yml
src/connectors/shdr/: README.md
src/debug/: README.md  dev_barcode_reader.yml  dev_temp_sensors.yml  set_value.py  subscribe_to_assets.py
tests/connectors/common/: test_coordinator.py  test_gateway.py
(+20 files in other folders)
