[project]
name = "openfactory-connectors"
version = "0.4.2"
description = "A collection of device connectors for OpenFactory."
requires-python = ">=3.12"
dependencies = [
    "OpenFactory @ git+https://github.com/openfactoryio/openfactory-core.git@v0.4.2",
]

[project.optional-dependencies]
dev = [
    "flake8",
    "tomlkit",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
