[project]
name = "openfactory-connectors"
version = "0.6.1"
description = "A collection of device connectors for OpenFactory."
requires-python = ">=3.12"
dependencies = [
    "OpenFactory @ git+https://github.com/openfactoryio/openfactory-core.git@v0.6.1",
    "fastapi>=0.110.0,<1.0",
    "uvicorn>=0.29.0,<1.0",
    "uvloop>=0.19.0,<1.0"
]

[project.optional-dependencies]
dev = [
    "fastapi",
    "asyncua",
    "flake8",
    "tomlkit",
]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = []

[tool.setuptools.packages.find]
where = [".", "src"]

include = [
    "opcua*",
    "shared*",
    "connectors*",
]
